qmsystem2 (1.0.7) unstable; urgency=low

   [Matias Muhonen]
   * Fixes: NB#221794 - QT API (QmUSBMode) should support new signals and provide "Mount" status
   * Bump copyright year
   * Depend on mce in the default build configuration

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 26 Jan 2011 13:47:57 +0200

qmsystem2 (1.0.6) unstable; urgency=low

   [Matias Muhonen]
   * Fixes: NB#218103 - qmsystem classes shouldn't connect to dbus signals in constructors

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 19 Jan 2011 10:01:26 +0200

qmsystem2 (1.0.5) unstable; urgency=low

   [Yang Yang]
   * Add power key test to manual-key-test

   [Matias Muhonen]
   * Fixes: NB#218465 - Activate offline mode shown in offline mode
   * Fixes: NB#218788 - QmKeys does not inform clients about power key presses
   * Put back devicelock functionality without the devicelock dependency

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 14 Jan 2011 13:16:02 +0200

qmsystem2 (1.0.4) unstable; urgency=low

   [Antti Virtanen]
   * Compatible with sensord-0.6.33.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 29 Dec 2010 14:44:18 +0200

qmsystem2 (1.0.3) unstable; urgency=low

   [Matias Muhonen]
   * Added QmSystemInformation
   * Fixes: NB#211690 - Circular dependency between qmsystem2, devicelock and qt-mobility
   * Use timed's package config file for linking to libtimed

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 29 Dec 2010 11:17:08 +0200

qmsystem2 (1.0.2) unstable; urgency=low

   [Matias Muhonen]
   * Optimize QmIPCInterface::callAsynchronously() performance
   * Fixes: NB#214676 - QmSystem does not expose the possibility to make any async calls for blocking functionality

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 27 Dec 2010 12:10:16 +0200

qmsystem2 (1.0.1) unstable; urgency=low

   [Matias Muhonen]
   * Fix warnings from the static analysis tool