@@ -1,5 +1,8 @@
 qmsystem2 (1.0.7) unstable; urgency=low
 
+   [Yang Yang]
+   * Add mountStatus and fileSystemWillUnmount test to manual-usb-test
+
    [Matias Muhonen]
    * Fixes: NB#221794 - QT API (QmUSBMode) should support new signals and provide "Mount" status
    * Bump copyright year
